--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ repositories {
 
 dependencies {
 
-	implementation 'com.sugar.bakers.company:domain:0.0.1-SNAPSHOT'
+	implementation 'com.sugar.bakers.company:domain:0.0.1-SNAPSHOT' // get from mavenLocal
 
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.security:spring-security-test'
